fix chat overflow

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -89,3 +89,7 @@ body {
 .lk-list {
   overflow: scroll !important;
 }
+
+[data-lk-theme] .lk-list {
+  overflow: scroll !important;
+}
